--- a/src/styles/accordion.sass
+++ b/src/styles/accordion.sass
@@ -3,14 +3,11 @@
 .accordion
   box-sizing: border-box
   width: 100%
-  margin: 10px
-
-  &-contents
-    margin-top: 6px
+  margin: 8px
 
   &-item
 
-    &-label
+    &-control
       display: flex
       padding: 10px
       cursor: pointer
@@ -52,5 +49,5 @@
     &-contents
       padding: 5px
       display: block
-      margin-left: 15px
       border-left: 2px solid $background-secondary
+      margin-left: 16px
