--- a/src/styles/dropdown.sass
+++ b/src/styles/dropdown.sass
@@ -2,7 +2,8 @@
   
 .dropdown
   margin: 10px
-  height: fit-content
+  height: fit-content //to prevent container from growing with flex
+  width: 100%
 
   &-label
     font-size: 14px
@@ -18,7 +19,7 @@
     transition: all 200ms, padding 0ms
     font-size: 90%
     line-height: 1
-    width: 300px
+    width: 100%
     
     &.open
       border-radius: 2px 2px 0px 0px
@@ -61,21 +62,15 @@
       display: flex
   
   &-icon
-    display: flex
-    align-self: center
-    margin-left: 20px
+    margin: 0px
+    width: 20px
     transition: all 200ms
-    justify-content: flex-end
-    flex-grow: 1
-    
-    svg
-      margin: 0px
     
     path
       fill: $color-primary
     
     &.open
-      transform: rotateX(180deg)
+      transform: rotateX(180deg) 
 
   &-menu
     min-width: 100%
