--- a/src/styles/radio-input.sass
+++ b/src/styles/radio-input.sass
@@ -48,6 +48,7 @@
   &-option-label
     display: block
     height: fit-content
+    color: $background-primary
     
     &.left 
       margin-right: 12px
