--- a/src/Content/Accordion/accordion.sass
+++ b/src/Content/Accordion/accordion.sass
@@ -1,53 +1,53 @@
 @import "../../globals"
-  
+
 .accordion
-  box-sizing: border-box
-  width: 100%
-  margin: 8px
 
-  &-item
+  &-control
+    display: flex
+    flex-wrap: wrap
+    cursor: pointer
+    background-color: $base
+    color: white
+    transition: all 200ms
+    z-index: 1
+  
+    &:hover
+      background-color: $base-lighter
+      box-shadow: 2px 2px 6px 0px $shadow-color
+  
+    &.first
+      border-radius: 2px 2px 0px 0px
 
-    &-control
-      display: flex
-      padding: 10px
-      cursor: pointer
-      background-color: $base
-      color: white
-      transition: all 200ms
-      
-      &:hover
-        background-color: $base-lighter
-        box-shadow: 2px 2px 6px 0px $shadow-color
-      
-      &.first
-        border-radius: 2px 2px 0px 0px
+    &.last
+      border-radius: 0px 0px 2px 2px
 
-      &.last
-        border-radius: 0px 0px 2px 2px
-    
-      svg
-        width: 12px
-        transition: all 200ms
-        margin-right: 12px
-      
-        path
-          fill: white
-      
-        &.open
-          transform: rotate(90deg)
+  &-icon
+    transition: all 200ms
+    fill: white
+    margin-left: 12px
+    align-self: center
+  
+    &.open
+      transform: rotate(90deg)
 
-    &-box
-      transform-origin: 0% 0%
-      transform: scaleY(0)
-      transition: all 200ms
-      height: 0px
+  &-label
+    margin: 12px
 
-      &.open
-        padding: 10px
-        transform: scaleY(1)
-        height: initial
-    
-    &-contents
+  &-contents
+    transform-origin: 0% 0%
+    transform: scaleY(0)
+    transition: all 200ms
+    height: 0px
+    flex-basis: 100%
+    background-color: white
+    color: $base
+
+    &.open
+      padding: 12px
+      transform: scaleY(1)
+      height: initial
+
+    &-inner
       padding: 5px
       display: block
       border-left: 2px solid $base
