--- a/src/Interaction/Drawer/drawer.sass
+++ b/src/Interaction/Drawer/drawer.sass
@@ -4,24 +4,20 @@
   position: fixed
   transition: all 200ms
   z-index: 2
-  padding: 10px
   background-color: white
 
   &-close
-    opacity: 0
     position: absolute
+    opacity: 0
     display: flex
     font-size: 40px
     cursor: pointer
     background-color: white
-    transition: all 200ms
-    z-index: 2
-    
-    svg
-      fill: $base
+    z-index: -1
 
     &.open
       opacity: 1
+      z-index: 2
 
     &.top
       top: calc(100%)
@@ -46,6 +42,18 @@
       left: calc(100%)
       border-radius: 0px 5px 5px 0px
       box-shadow: 10px 0px 10px 0px $shadow-color
+    
+    &-icon
+      fill: $base
+
+      &.top
+        transform: rotate(90deg)
+
+      &.right
+        transform: rotate(180deg)
+
+      &.bottom
+        transform: rotate(270deg)
 
   &.top
     top: 0px
