--- a/src/Interaction/Modal/modal.sass
+++ b/src/Interaction/Modal/modal.sass
@@ -24,6 +24,7 @@
     background-color: white
     padding: 20px
     border-radius: 2px
+    border: 2px solid $base
 
   &-close
     position: absolute
