restyling and new element textArea

--- a/src/styles/container.sass
+++ b/src/styles/container.sass
@@ -6,13 +6,13 @@
   height: fit-content
 
   &.margined
-    margin: 12px
+    margin: 10px
 
   &.raised
     box-shadow: 0px 0px 4px 2px $shadow-color
 
   &.bordered
-    border: 2px solid $base
+    border: 2px solid $base-dark
 
   &.clickable
     transition: all 200ms
@@ -27,14 +27,14 @@
   &-header
     width: 100%
     border-bottom: 1px solid black
-    padding-bottom: 12px
-    font-size: 20px
+    padding-bottom: 10px
+    font-size: 22px
     margin-bottom: 20px
 
     &.inverted
-      background-image: linear-gradient($base, $base-lighter) 
+      background-image: linear-gradient($base-dark, $base) 
       color: white
-      padding: 12px
+      padding: 10px
       border-radius: 2px 2px 0px 0px
       margin-bottom: 0px
       border-bottom: none
