--- a/src/styles/drawer.sass
+++ b/src/styles/drawer.sass
@@ -44,7 +44,7 @@
       box-shadow: 10px 0px 10px 0px $shadow-color
     
     &-icon
-      fill: $base
+      fill: $base-dark
 
       &.top
         transform: rotate(90deg)
