--- a/src/styles/loader.sass
+++ b/src/styles/loader.sass
@@ -52,43 +52,43 @@
 
 @keyframes fifth
   0%
-    transform: translate(-40px, -40px)
+    transform: translate(-50px, -50px)
   25%
-    transform: translate(-40px, -40px)
+    transform: translate(-50px, -50px)
   50%
-    transform: translate(40px, -40px)
+    transform: translate(50px, -50px)
   100%
-    transform: translate(40px, -40px)
+    transform: translate(50px, -50px)
 
 @keyframes sixth
   0%
-    transform: translate(40px, -40px)
+    transform: translate(50px, -50px)
   25%
-    transform: translate(40px, -40px)
+    transform: translate(50px, -50px)
   50%
-    transform: translate(40px, 40px)
+    transform: translate(50px, 50px)
   100%
-    transform: translate(40px, 40px)
+    transform: translate(50px, 50px)
 
 @keyframes seventh
   0%
-    transform: translate(40px, 40px)
+    transform: translate(50px, 50px)
   25%
-    transform: translate(40px, 40px)
+    transform: translate(50px, 50px)
   50%
-    transform: translate(-40px, 40px)
+    transform: translate(-50px, 50px)
   100%
-    transform: translate(-40px, 40px)
+    transform: translate(-50px, 50px)
 
 @keyframes eighth
   0%
-    transform: translate(-40px, 40px)
+    transform: translate(-50px, 50px)
   25%
-    transform: translate(-40px, 40px)
+    transform: translate(-50px, 50px)
   50%
-    transform: translate(-40px, -40px)
+    transform: translate(-50px, -50px)
   100%
-    transform: translate(-40px, -40px)
+    transform: translate(-50px, -50px)
 
 @keyframes text
   0%
@@ -122,13 +122,13 @@
       display: flex
       align-items: center
       justify-content: center
-      padding: 12px
+      padding: 10px
       animation-duration: 5s
       animation-timing-function: ease-in
       animation-iteration-count: infinite
 
     &-ball
-      background-color: $base
+      background-color: $base-dark
       position: absolute
       top: 20px
       left: 20px
