--- a/src/styles/menu.sass
+++ b/src/styles/menu.sass
@@ -14,7 +14,7 @@
   transform: translateX(-100%)
 
   &.inverted
-    background-color: $base
+    background-color: $base-dark
     color: white
 
   &.open
@@ -31,7 +31,7 @@
     z-index: 2
     top: 0px
     left: 100%
-    border-radius: 0px 0px 4px 0px
+    border-radius: 0px 0px 5px 0px
     transition: all 200ms
 
     &:hover
@@ -41,10 +41,10 @@
       box-shadow: 10px 0px 10px 0px $shadow-color
 
     &.inverted
-      background-color: $base
+      background-color: $base-dark
       color: white
 
       &:hover
-        background-color: $base-lighter
+        background-color: $base
 
 
