--- a/src/styles/dropdown.sass
+++ b/src/styles/dropdown.sass
@@ -2,29 +2,32 @@
   
 .dropdown
   height: fit-content //to prevent container from growing with flex
-  width: 100%
+  font-size: 16px
+  margin: 8px 8px 0px 0px
+  
+  &.short
+    width: 120px
+  
+  &.medium
+    width: 220px
+
+  &.long
+    width: 320px
 
   &-label
-    font-size: 16px
+    margin-bottom: 4px
 
   &-control
     display: flex
-    padding: 12px
-    margin-top: 4px
-    color: $base
+    align-items: center
     cursor: pointer
     border-radius: 2px
-    border: 2px solid $base
-    transition: all 200ms, padding 0ms
-    font-size: 90%
-    line-height: 1
+    border: 2px solid $base-darkest
+    transition: all 200ms
     width: 100%
     
     &.open
       border-radius: 2px 2px 0px 0px
-    
-    &.multiple
-      padding: 4px
     
     &:hover
       box-shadow: 2px 2px 6px 0px $shadow-color
@@ -33,35 +36,23 @@
       outline: none
 
   &-value
-    flex-grow: 1
-    align-self: center
     overflow: hidden
     text-overflow: ellipsis
     white-space: nowrap
+    margin: 8px
     
-    &-multiple
-      display: flex
-      align-self: center
-      align-items: center
-      text-overflow: ellipsis
-      white-space: nowrap
+    &.multiple
+      overflow: visible
       border-radius: 2px
-      background-color: $base
-      color: white
+      background-color: $base-dark
       padding: 4px
-      margin-left: 4px
-      
-      &:first-of-type
-        margin-left: 0px
+      margin: 4px 0px 4px 4px
   
   &-icon
     margin: 0px 0px 0px auto
-    align-self: center
     transition: all 200ms, margin 0ms
-    fill: $base
-
-    &.multiple
-      margin-right: 4px
+    fill: $base-darkest
+    flex-shrink: 0
     
     &.open
       transform: rotateX(180deg) 
@@ -73,24 +64,20 @@
     position: absolute
     top: 100%
     background-color: white
-    color: $base
     transform-origin: 0% 0%
     transform: scaleY(0)
-    opacity: 0
     border-radius: 0px 0px 2px 2px
-    z-index: 2
+    z-index: 1
     transition: all 200ms
-    overflow-y: scroll
+    overflow-y: auto
     padding: 4px
-    border: 2px solid $base
+    border: 2px solid $base-darkest
     
     &.open
       transform: scale(1, 1)
-      opacity: 1
 
   &-item
     padding: 12px 16px
-    color: $base
     cursor: pointer
     transition: all 200ms
     overflow: hidden
@@ -100,14 +87,11 @@
     margin-top: 4px
     
     &:hover
-      background-color: $base-lighter
-      color: white
+      background-color: $base-dark
+
+    &:first-of-type
+      margin-top: 0px
     
     &.selected
-      background-color: $base
-      color: white
-
-      &:hover
-        background-color: $base-lighter
-        color: white
+      background-color: $base-dark
     
