--- a/src/styles/range-input.sass
+++ b/src/styles/range-input.sass
@@ -18,22 +18,22 @@
     width: 100%
     -webkit-appearance: none
     background: transparent
-    padding: 16px 0px
+    padding: 15px 0px
     cursor: pointer
 
     &::-webkit-slider-thumb
       -webkit-appearance: none
-      margin-top: -8px
+      margin-top: -7px
       height: 20px
       width: 20px
       border-radius: 15%
-      background-color: $base
+      background-color: $base-dark
 
     &::-webkit-slider-runnable-track
-      height: 12px
+      height: 10px
       width: 100%
       border-radius: 4px
-      border: 2px solid $base
+      border: 2px solid $base-dark
 
     &:focus
       outline: none
