--- a/src/styles/table.sass
+++ b/src/styles/table.sass
@@ -6,20 +6,20 @@
 
   &-header
     font-size: 18px
-    background-color: $base
+    background-color: $base-dark
     color: white
-    padding: 12px 32px 12px 4px
+    padding: 12px 30px 12px 6px
     text-align: left
     cursor: pointer
     transition: all 200ms
     
     &:hover
-      background-color: $base-lighter
+      background-color: $base
 
   &-sorticon
     position: absolute
     top: 50%
-    right: 12px
+    right: 10px
     transform: translateY(-50%)
 
     path
@@ -40,10 +40,10 @@
     &.active
       transition: all 200ms
       transform: translateX(-8px)
-      background-color: $active
+      background-color: green
       color: white
       box-shadow: 2px 0px 8px 0px $shadow-color
 
   &-cell
-    font-size: 16px
+    font-size: 15px
     padding: 10px 10px 10px 22px
