--- a/src/styles/textarea.sass
+++ b/src/styles/textarea.sass
@@ -1,17 +1,26 @@
 @import "./_globals"
   
-.input
+.textarea
   font-size: 16px
   margin: 8px 8px 0px 0px
 
-  &.short
+  &.w-short
     width: 120px
   
-  &.medium
+  &.w-medium
     width: 220px
 
-  &.long
+  &.w-long
     width: 320px
+
+  &.h-short
+    height: 120px
+  
+  &.h-medium
+    height: 220px
+
+  &.h-long
+    height: 320px
 
   &-label
     margin-bottom: 4px
@@ -35,6 +44,7 @@
 
   &-container
     width: 100%
+    height: 100%
 
   &-control
     border: 2px solid $base-darkest
@@ -45,6 +55,7 @@
     font-size: 16px
     transition: all 200ms
     min-height: 36px
+    height: 100%
     box-shadow: 0px 0px 4px 0px $shadow-color inset
     
     &::placeholder
@@ -55,26 +66,3 @@
 
     &.invalid
       background-color: $base-red
-
-  &-prefix
-    position: absolute
-    top: 50%
-    transform: translateY(-50%)
-    padding-left: 8px //Padding helps javascript know how to accomodate its size.
-    color: $base-darkest
-
-  &-suffix
-    position: absolute
-    top: 50%
-    right: 8px
-    transform: translateY(-50%)
-    padding-left: 8px //Padding helps javascript know how to accomodate its size.
-    color: $base-darkest
-
-input[type=number]
-  &::-webkit-inner-spin-button
-    -webkit-appearance: none
-    margin: 0px
-  &::-webkit-outer-spin-button
-    -webkit-appearance: none
-    margin: 0px
