Added Notice component, styling modifications

--- a/src/styles/_globals.sass
+++ b/src/styles/_globals.sass
@@ -11,5 +11,5 @@ $shadow-color: rgba(0, 0, 0, 0.5)
 $link: #303ebe
 $small-shadow: 2px 2px 6px 0px $shadow-color
 $med-shadow: 0px 2px 4px 2px $shadow-color
-$trans: all 200ms
+$trans: all 200ms, z-index 0ms
 $font: Verdana, Geneva, Tahoma, sans-serif
