--- a/src/styles/container.sass
+++ b/src/styles/container.sass
@@ -6,13 +6,13 @@
   height: fit-content
 
   &.margined
-    margin: 10px
+    margin: 12px
 
   &.raised
     box-shadow: 0px 0px 4px 2px $shadow-color
 
   &.bordered
-    border: 2px solid $base-dark
+    border: 2px solid $base-darkest
 
   &.clickable
     transition: all 200ms
@@ -26,15 +26,15 @@
 
   &-header
     width: 100%
-    border-bottom: 1px solid black
-    padding-bottom: 10px
-    font-size: 22px
-    margin-bottom: 20px
+    border-bottom: 2px solid $base-darkest
+    padding-bottom: 12px
+    font-size: 24px
+    margin-bottom: 12px
 
     &.inverted
       background-image: linear-gradient($base-dark, $base) 
       color: white
-      padding: 10px
+      padding: 12px
       border-radius: 2px 2px 0px 0px
       margin-bottom: 0px
       border-bottom: none
@@ -47,10 +47,12 @@
 
     &.flex
       display: flex
+
+    &.wrap
       flex-wrap: wrap
 
-      &.column
-        flex-direction: column
+    &.column
+      flex-direction: column
 
 
 
