--- a/src/styles/textarea.sass
+++ b/src/styles/textarea.sass
@@ -2,25 +2,7 @@
   
 .textarea
   font-size: 16px
-  margin: 8px 8px 0px 0px
-
-  &.w-short
-    width: 120px
-  
-  &.w-medium
-    width: 220px
-
-  &.w-long
-    width: 320px
-
-  &.h-short
-    height: 120px
-  
-  &.h-medium
-    height: 220px
-
-  &.h-long
-    height: 320px
+  margin: 16px 16px 0px 0px
 
   &-label
     margin-bottom: 4px
@@ -56,7 +38,25 @@
     transition: all 200ms
     min-height: 36px
     height: 100%
-    box-shadow: 0px 0px 4px 0px $shadow-color inset
+    resize: none
+
+    &.w-short
+      width: 120px
+  
+    &.w-medium
+      width: 220px
+
+    &.w-long
+      width: 320px
+
+    &.h-short
+      height: 120px
+    
+    &.h-medium
+      height: 220px
+
+    &.h-long
+      height: 320px
     
     &::placeholder
       color: gray
