--- a/src/styles/dropdown.sass
+++ b/src/styles/dropdown.sass
@@ -4,6 +4,7 @@
   height: fit-content //to prevent container from growing with flex
   font-size: 16px
   margin: 16px 16px 0px 0px
+  position: relative //To ensure positioning of absolutely positioned menu.
   
   &.short
     width: 120px
