--- a/src/styles/loader.sass
+++ b/src/styles/loader.sass
@@ -106,9 +106,17 @@
   height: 100%
   width: 100%
   display: flex
+  position: absolute
+  left: 50%
+  top: 50%
+  transform: translate(-50%, -50%)
   justify-content: center
   align-items: center
   min-height: inherit
+  z-index: 1
+
+  &.dim-back
+    background-color: rgba(0, 0, 0, 0.25)
 
   &-container
     height: 60px
@@ -131,7 +139,7 @@
       animation-iteration-count: infinite
 
     &-ball
-      background-color: $base-dark
+      background-color: $base-darkest
       position: absolute
       top: 20px
       left: 20px
