--- a/src/styles/modal.sass
+++ b/src/styles/modal.sass
@@ -1,41 +1,27 @@
 @import "./_globals"
   
 .modal
-  width: 100%
-  height: 100%
-  position: fixed
+  position: absolute
   top: 0px
+  right: 0px
+  bottom: 0px
   left: 0px
   background-color: $shadow-color
-  transition: all 200ms
+  transition: all 200ms, z-index 0ms 200ms
   opacity: 0
   z-index: -1
   
   &.open
     opacity: 1
     z-index: 2
+    transition: all 200ms, z-index 0ms 0ms
   
   &-contents
     position: absolute
-    top: 20%
+    top: 50%
     left: 50%
-    transform: translateX(-50%)
+    transform: translate(-50%, -50%)
     background-color: white
     padding: 20px
     border-radius: 2px
     border: 2px solid $base-darkest
-
-  &-close
-    position: absolute
-    top: -6px
-    right: -6px
-    cursor: pointer
-    fill: $base-darkest
-    background-color: white
-    border-radius: 50%
-    border: 2px solid $base-darkest
-    font-size: 20px
-    transition: all 200ms
-
-    &:hover
-      transform: scale(1.15, 1.15)
