--- a/src/styles/notice.sass
+++ b/src/styles/notice.sass
@@ -2,20 +2,28 @@
 
 .notice
   position: absolute
-  top: 12px
-  left: 50%
-  transform: translateX(-50%) translateY(-100%)
+  top: 0px
+  left: 0px
+  right: 0px
+  transform: translateY(-100%)
   opacity: 0
   z-index: -1
   transition: all 600ms, z-index 0ms
-  background-color: $base-dark
-  padding: 20px
   display: flex
-  align-items: center
-  border-radius: 4px
+  justify-content: center
 
   &.show
-    transform: translateX(-50%) translateY(0px)
+    transform: translateY(0px)
     opacity: 1
     z-index: 1
+
+  &-wrapper
+    margin-top: 12px
+    background-color: $base-dark
+    padding: 20px
+    display: flex
+    align-items: center
+    border-radius: 4px
+    box-shadow: $small-shadow
+    width: fit-content
   
